added header as param for authorization
